// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField  a large TextFieldComponent object should return a large TextFieldComponent object  1`] = `
.c0 {
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  font-family: inherit;
  font-size: 1.2rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 8px;
  padding: 1rem;
}

<TextField
  assistiveText=""
  controlId="exampleFullName"
  controlLabel="Full name"
  lg={true}
  validationError=""
>
  <ControlGroupComponent
    assistiveText=""
    controlId="exampleFullName"
    controlLabel="Full name"
    lg={true}
    validationError=""
  >
    <ControlGroupBase
      assistiveText=""
      controlId="exampleFullName"
      controlLabel="Full name"
      validationError=""
    >
      <styled.div>
        <div
          className=""
        >
          <ControlLabel
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            htmlFor="exampleFullName"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
          >
            <styled.label
              htmlFor="exampleFullName"
            >
              <label
                className="c0"
                htmlFor="exampleFullName"
              >
                Full name
              </label>
            </styled.label>
          </ControlLabel>
           
          <TextFieldComponentConvertor
            controlId="exampleFullName"
            lg={true}
          >
            <TextFieldComponent
              borderColor="hsl(0, 0%, 25%)"
              borderRadius="4px"
              color="inherit"
              fontFamily="inherit"
              fontWeight="inherit"
              id="exampleFullName"
              kerning="inherit"
              lg={true}
              padding="1rem"
              sm={false}
              textAlign="inherit"
              textDecoration="inherit"
            >
              <styled.input
                id="exampleFullName"
              >
                <input
                  className="c1"
                  id="exampleFullName"
                  type="text"
                />
              </styled.input>
            </TextFieldComponent>
          </TextFieldComponentConvertor>
           
        </div>
      </styled.div>
    </ControlGroupBase>
  </ControlGroupComponent>
</TextField>
`;

exports[`TextField Component base should return a TextField object 1`] = `
.c0 {
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  padding: 1rem;
}

<TextField
  assistiveText=""
  controlId="exampleFullName"
  controlLabel="Full name"
  validationError=""
>
  <ControlGroupComponent
    assistiveText=""
    controlId="exampleFullName"
    controlLabel="Full name"
    validationError=""
  >
    <ControlGroupBase
      assistiveText=""
      controlId="exampleFullName"
      controlLabel="Full name"
      validationError=""
    >
      <styled.div>
        <div
          className=""
        >
          <ControlLabel
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            htmlFor="exampleFullName"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
          >
            <styled.label
              htmlFor="exampleFullName"
            >
              <label
                className="c0"
                htmlFor="exampleFullName"
              >
                Full name
              </label>
            </styled.label>
          </ControlLabel>
           
          <TextFieldComponentConvertor
            controlId="exampleFullName"
          >
            <TextFieldComponent
              borderColor="hsl(0, 0%, 25%)"
              borderRadius="4px"
              color="inherit"
              fontFamily="inherit"
              fontWeight="inherit"
              id="exampleFullName"
              kerning="inherit"
              lg={false}
              padding="1rem"
              sm={false}
              textAlign="inherit"
              textDecoration="inherit"
            >
              <styled.input
                id="exampleFullName"
              >
                <input
                  className="c1"
                  id="exampleFullName"
                  type="text"
                />
              </styled.input>
            </TextFieldComponent>
          </TextFieldComponentConvertor>
           
        </div>
      </styled.div>
    </ControlGroupBase>
  </ControlGroupComponent>
</TextField>
`;

exports[`TextField a small TextFieldComponent object should return a small TextFieldComponent object  1`] = `
.c0 {
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 2px;
  padding: 1rem;
}

<TextField
  assistiveText=""
  controlId="exampleFullName"
  controlLabel="Full name"
  sm={true}
  validationError=""
>
  <ControlGroupComponent
    assistiveText=""
    controlId="exampleFullName"
    controlLabel="Full name"
    sm={true}
    validationError=""
  >
    <ControlGroupBase
      assistiveText=""
      controlId="exampleFullName"
      controlLabel="Full name"
      validationError=""
    >
      <styled.div>
        <div
          className=""
        >
          <ControlLabel
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            htmlFor="exampleFullName"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
          >
            <styled.label
              htmlFor="exampleFullName"
            >
              <label
                className="c0"
                htmlFor="exampleFullName"
              >
                Full name
              </label>
            </styled.label>
          </ControlLabel>
           
          <TextFieldComponentConvertor
            controlId="exampleFullName"
            sm={true}
          >
            <TextFieldComponent
              borderColor="hsl(0, 0%, 25%)"
              borderRadius="4px"
              color="inherit"
              fontFamily="inherit"
              fontWeight="inherit"
              id="exampleFullName"
              kerning="inherit"
              lg={false}
              padding="1rem"
              sm={true}
              textAlign="inherit"
              textDecoration="inherit"
            >
              <styled.input
                id="exampleFullName"
              >
                <input
                  className="c1"
                  id="exampleFullName"
                  type="text"
                />
              </styled.input>
            </TextFieldComponent>
          </TextFieldComponentConvertor>
           
        </div>
      </styled.div>
    </ControlGroupBase>
  </ControlGroupComponent>
</TextField>
`;

exports[`TextField with assistive text should return a TextField object contain Assistive Text 1`] = `
.c0 {
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  padding: 1rem;
}

.c2 {
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<TextField
  assistiveText="Please tell me your name"
  controlId="exampleFullName"
  controlLabel="Full name"
  validationError=""
>
  <ControlGroupComponent
    assistiveText="Please tell me your name"
    controlId="exampleFullName"
    controlLabel="Full name"
    validationError=""
  >
    <ControlGroupBase
      assistiveText="Please tell me your name"
      controlId="exampleFullName"
      controlLabel="Full name"
      validationError=""
    >
      <styled.div>
        <div
          className=""
        >
          <ControlLabel
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            htmlFor="exampleFullName"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
          >
            <styled.label
              htmlFor="exampleFullName"
            >
              <label
                className="c0"
                htmlFor="exampleFullName"
              >
                Full name
              </label>
            </styled.label>
          </ControlLabel>
           
          <TextFieldComponentConvertor
            controlId="exampleFullName"
          >
            <TextFieldComponent
              borderColor="hsl(0, 0%, 25%)"
              borderRadius="4px"
              color="inherit"
              fontFamily="inherit"
              fontWeight="inherit"
              id="exampleFullName"
              kerning="inherit"
              lg={false}
              padding="1rem"
              sm={false}
              textAlign="inherit"
              textDecoration="inherit"
            >
              <styled.input
                id="exampleFullName"
              >
                <input
                  className="c1"
                  id="exampleFullName"
                  type="text"
                />
              </styled.input>
            </TextFieldComponent>
          </TextFieldComponentConvertor>
           
          <AssistiveText
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            id="exampleFullNameHelp"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
          >
            <styled.div
              id="exampleFullNameHelp"
            >
              <div
                className="c2"
                id="exampleFullNameHelp"
              >
                Please tell me your name
              </div>
            </styled.div>
          </AssistiveText>
        </div>
      </styled.div>
    </ControlGroupBase>
  </ControlGroupComponent>
</TextField>
`;

exports[`TextField with some other props should return a TextField object contain input with those other props  1`] = `
.c0 {
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  padding: 1rem;
}

<TextField
  assistiveText=""
  controlId="exampleFullName"
  controlLabel="Full name"
  link="abc"
  require={true}
  validationError=""
>
  <ControlGroupComponent
    assistiveText=""
    controlId="exampleFullName"
    controlLabel="Full name"
    link="abc"
    require={true}
    validationError=""
  >
    <ControlGroupBase
      assistiveText=""
      controlId="exampleFullName"
      controlLabel="Full name"
      validationError=""
    >
      <styled.div>
        <div
          className=""
        >
          <ControlLabel
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            htmlFor="exampleFullName"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
          >
            <styled.label
              htmlFor="exampleFullName"
            >
              <label
                className="c0"
                htmlFor="exampleFullName"
              >
                Full name
              </label>
            </styled.label>
          </ControlLabel>
           
          <TextFieldComponentConvertor
            controlId="exampleFullName"
            link="abc"
            require={true}
          >
            <TextFieldComponent
              borderColor="hsl(0, 0%, 25%)"
              borderRadius="4px"
              color="inherit"
              fontFamily="inherit"
              fontWeight="inherit"
              id="exampleFullName"
              kerning="inherit"
              lg={false}
              link="abc"
              padding="1rem"
              require={true}
              sm={false}
              textAlign="inherit"
              textDecoration="inherit"
            >
              <styled.input
                id="exampleFullName"
                link="abc"
                require={true}
              >
                <input
                  className="c1"
                  id="exampleFullName"
                  type="text"
                />
              </styled.input>
            </TextFieldComponent>
          </TextFieldComponentConvertor>
           
        </div>
      </styled.div>
    </ControlGroupBase>
  </ControlGroupComponent>
</TextField>
`;

exports[`TextField with validation error should return a TextField object contain Assistive Text with error style 1`] = `
.c0 {
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  padding: 1rem;
}

.c2 {
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: hsl(4.1,89.6%,58.4%);
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<TextField
  assistiveText=""
  controlId="exampleFullName"
  controlLabel="Full name"
  validationError="This is a require field."
>
  <ControlGroupComponent
    assistiveText=""
    controlId="exampleFullName"
    controlLabel="Full name"
    validationError="This is a require field."
  >
    <ControlGroupBase
      assistiveText=""
      controlId="exampleFullName"
      controlLabel="Full name"
      validationError="This is a require field."
    >
      <styled.div>
        <div
          className=""
        >
          <ControlLabel
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            htmlFor="exampleFullName"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
          >
            <styled.label
              htmlFor="exampleFullName"
            >
              <label
                className="c0"
                htmlFor="exampleFullName"
              >
                Full name
              </label>
            </styled.label>
          </ControlLabel>
           
          <TextFieldComponentConvertor
            controlId="exampleFullName"
          >
            <TextFieldComponent
              borderColor="hsl(0, 0%, 25%)"
              borderRadius="4px"
              color="inherit"
              fontFamily="inherit"
              fontWeight="inherit"
              id="exampleFullName"
              kerning="inherit"
              lg={false}
              padding="1rem"
              sm={false}
              textAlign="inherit"
              textDecoration="inherit"
            >
              <styled.input
                id="exampleFullName"
              >
                <input
                  className="c1"
                  id="exampleFullName"
                  type="text"
                />
              </styled.input>
            </TextFieldComponent>
          </TextFieldComponentConvertor>
           
          <AssistiveText
            color="brandDanger"
            fontFamily="inherit"
            fontWeight="inherit"
            id="exampleFullNameError"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
          >
            <styled.div
              id="exampleFullNameError"
            >
              <div
                className="c2"
                id="exampleFullNameError"
              >
                This is a require field.
              </div>
            </styled.div>
          </AssistiveText>
        </div>
      </styled.div>
    </ControlGroupBase>
  </ControlGroupComponent>
</TextField>
`;
